RESOLVED FIXED141219
video.controls should not return true just because of fullscreen
https://bugs.webkit.org/show_bug.cgi?id=141219
Summary video.controls should not return true just because of fullscreen
Eric Carlson
Reported 2015-02-03 16:42:32 PST
HTMLMediaElement::controls always returns true when an element is in fullscreen. While it may be necessary to show native controls when in fullscreen, video.controls should reflect the attribute value.
Attachments
Proposed patch. (5.95 KB, patch)
2015-02-03 18:01 PST, Eric Carlson
no flags
Eric Carlson
Comment 1 2015-02-03 16:43:50 PST
Eric Carlson
Comment 2 2015-02-03 18:01:19 PST
Created attachment 246002 [details] Proposed patch.
Dean Jackson
Comment 3 2015-02-04 08:24:36 PST
Comment on attachment 246002 [details] Proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=246002&action=review > Source/WebCore/ChangeLog:3 > + video.attribute should not return true just because of fullscreen Should this be "video.controls"?
WebKit Commit Bot
Comment 4 2015-02-04 10:16:12 PST
Comment on attachment 246002 [details] Proposed patch. Clearing flags on attachment: 246002 Committed r179612: <http://trac.webkit.org/changeset/179612>
WebKit Commit Bot
Comment 5 2015-02-04 10:16:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.