video.attribute should not return true just because of fullscreen https://bugs.webkit.org/show_bug.cgi?id=141219

Reviewed by Dean Jackson.

Source/WebCore:

No new tests, updated media/video-fullscreeen-only-controls.html

* Modules/mediacontrols/mediaControlsApple.js:
(Controller.prototype.shouldHaveControls):
* Modules/mediacontrols/mediaControlsiOS.js:
(ControllerIOS.prototype.isFullScreen):

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::controls): Don't consider fullscreen status.
(WebCore::HTMLMediaElement::configureMediaControls): Create controls if a video element
    isn't allowed to play inline, or if it is in fullscreen.

LayoutTests:

* media/video-fullscreeen-only-controls-expected.txt: Update.
* media/video-fullscreeen-only-controls.html: Ditto.


Canonical link: https://commits.webkit.org/159263@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179612 268f45cc-cd09-0410-ab3c-d52691b4dbfc